core-services/ArgoCD/GatewayAPI/03-httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui
  namespace: services
spec:
  parentRefs:
    - kind: Gateway
      name: prod-gw-argocd
  hostnames:
    - argocd.prod.cilium.virtualelephant.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
